--- a/webglapp.html
+++ b/webglapp.html
@@ -21,5 +21,6 @@
         <script src="lib/cuon-utils.js"></script>
         <!-- mis scripts -->
         <script src="js/miscript.js"></script>
+        <script src="js/dibujapuntosVBO.js"></script>
     </body>
 </html>
