--- a/practica2.html
+++ b/practica2.html
@@ -24,7 +24,7 @@
         <div id="container"></div>
 
         <div id="info">
-            <h2>WebGL/Threejs Example</h2> 
+            <h2 style="color: white; background-color: rgba(0,0,0,0.7); padding: 10px; border-radius: 10px;">WebGL/Threejs Robot Arm: Jaume Ivars Grimalt</h2> 
         </div>
 
         <!-- Este enlace esta recomendado en la web de threejs -->
