trabajo casi terminado

--- a/trabajo.html
+++ b/trabajo.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-    3jsapp.html
+    trabajo.html
     Plantilla de carga de aplicaciones Threejs
 -->
 <html lang="es">
@@ -22,9 +22,10 @@
     <body>
 
         <div id="container"></div>
+        <h2 id="score" style="position: absolute; margin-top: 10px; top:0; color:white; width:100%; text-align: center;">Score</h2>
 
         <div id="info">
-            <h2 style="color: white; background-color: rgba(0,0,0,0.7); padding: 10px; border-radius: 10px;">WebGL/Threejs Robot Arm: Jaume Ivars Grimalt</h2> 
+            <h2 style="color: white; background-color: rgba(0,0,0,0.7); padding: 10px; border-radius: 10px;">WebGL/Threejs: Jaume Ivars Grimalt</h2> 
         </div>
 
         <!-- Este enlace esta recomendado en la web de threejs -->
