--- a/trabajo.html
+++ b/trabajo.html
@@ -17,12 +17,33 @@
 	            text-align: left;
 	            z-index: 1; 
             }
+
+            button#restart_button:hover{
+                background-color: rgba(50,50,50,0.9);
+                cursor: pointer;
+            }
+
+            button#restart_button{
+                font-size: 20px;
+                border-radius: 100px;
+                border: white solid 5px;
+                background-color: rgba(0,0,0,0.2);
+                color:white;
+                padding: 10px 40px;
+            }
         </style>
     </head>
     <body>
 
-        <div id="container"></div>
+        <div id="container" style="position: absolute;width:100%; height:100%; z-index: 0;"></div>
         <h2 id="score" style="position: absolute; margin-top: 10px; top:0; color:white; width:100%; text-align: center;">Score</h2>
+
+        <div id="gameover_screen" style="           display: none;             position: absolute; background-color:rgba(0,0,0,0.2); width:100%; height:100%; z-index: 10; align-items:center; justify-content: center; color: white; flex-direction: column;">
+
+                <h1 style="font-size: 100px; ">Game Over</h1>
+                <button id="restart_button" onclick="location.reload()">Restart</button>
+        </div>
+
 
         <div id="info">
             <h2 style="color: white; background-color: rgba(0,0,0,0.7); padding: 10px; border-radius: 10px;">WebGL/Threejs: Jaume Ivars Grimalt</h2> 
