--- a/trabajo.html
+++ b/trabajo.html
@@ -35,14 +35,16 @@
     </head>
     <body>
 
-        <div id="container" style="position: absolute;width:100%; height:100%; z-index: 0;"></div>
-        <h2 id="score" style="position: absolute; margin-top: 10px; top:0; color:white; width:100%; text-align: center;">Score</h2>
+        <div id="container" style="position: absolute;width:100%; height:100%; z-index: 0; filter: none;"></div>
 
-        <div id="gameover_screen" style="           display: none;             position: absolute; background-color:rgba(0,0,0,0.2); width:100%; height:100%; z-index: 10; align-items:center; justify-content: center; color: white; flex-direction: column;">
+        <div id="gameover_screen" style="           display: none;             z-index: 1; position: absolute; background-color:rgba(255,255,255,0.6); width:100%; height:50%; top:25%; z-index: 10; align-items:center; justify-content: center; color: black; flex-direction: column;">
 
-                <h1 style="font-size: 100px; ">Game Over</h1>
+                <h1 style="font-size: 100px; margin: 0;">Game Over</h1>
+                <h2 id="gameover_score" style="color:red; font-size: 100px;">score</h2>
                 <button id="restart_button" onclick="location.reload()">Restart</button>
         </div>
+        <h2 id="score" style="position: absolute; margin-top: 10px; top:0; color:white; width:100%; text-align: center; z-index: 2;">Score</h2>
+
 
 
         <div id="info">
